--- a/Practice_style.css
+++ b/Practice_style.css
@@ -152,6 +152,7 @@ footer {
   padding: 0;
   width: 100%;
   background-color: #F2F2F2;
+  height: 80px;
 }
 
 footer .country{
@@ -160,31 +161,31 @@ footer .country{
 }
 
 footer .footer {
-  display: flex;
+  display: inline-block;
   border-top: solid 1px lightgray;
   font-size: 12px;
   width: 100%;
-  justify-content: space-between;
 }
 
 .footer .footer-left ul{
   list-style: none;
-  display: flex;
+
 }
 
 .footer .footer-left ul li{
   padding-right: 15px;
+  float: left;
 }
 
 
 .footer .footer-right ul{
   list-style: none;
-  display: flex;
   margin-right: 10px;
 }
 
 .footer .footer-right ul li{
   padding-right: 15px;
+  float: right;
 }
 
 h2 {
